# aeon-ai

./: .gitignore  .zenodo.json  AI_POLICY.md  Agents.md  CHANGELOG.md  CHRONOPOEM.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKERFILE  GenesisChronik.md  Handbuch.md  README.md  ToDo.yaml  codework.yaml  codex-sync.yaml  codexinstructions.yaml  codexwork.yaml  codexworkinstructions.yaml  instructions-sorted.yaml  kontext.json  kontext.yaml  mkdocs.yml  package.json  pyproject.toml  runDryAgent.ts  sigillin.schema.json
.github/workflows/: release.yml
codex/: codex-roadmap.yaml
docs/: index.md  reference.md
docs/sigils/: conversations-progress.json  todo-sigil.yaml
scripts/: SigillinValidator.js  filter-conversations.js  generate-todo-sigil.js  instruction_sorter.js  mark-fragment.js  setup-unifiedmandala.sh  split-conversations.js
src/aeon_ai/: __init__.py  aeon_layer.py  cli.py  crep_evaluator.py  field_bridge.py  mirror_core.py  phase_detector.py  self_reflection.py  sigillin_bridge.py
src/aeon_ai/agents/: __init__.py  orchestrator.py
tests/: __init__.py  conftest.py  test_aeon_layer.py  test_agents.py  test_cli.py  test_contract.py  test_coverage_supplement.py  test_crep_evaluator.py  test_field_bridge.py  test_mirror_core.py  test_phase_detector.py  test_self_reflection.py  test_sigillin_bridge.py
