[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "aeon-ai"
version = "0.2.0"
description = "Self-reflective symbolic AI: real-time phase-transition detection and native self-reflection loop with mirror-based cognition"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "GenesisAeon", email = "genesis@aeon.ai" },
]
keywords = [
    "aeon",
    "mirror-machine",
    "self-reflection",
    "phase-transition",
    "sigillin",
    "crep",
    "fieldtheory",
    "lagrangian",
    "symbolic-ai",
    "unified-mandala",
    "utac-logistic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
stack = [
    "mirror-machine>=0.1.0",
    "entropy-governance>=0.1.0",
    "sigillin>=0.1.0",
    "utac-core>=0.1.0",
    "mandala-visualizer>=0.1.0",
    "cosmic-web>=0.1.0",
    "advanced-weighting-systems>=0.1.0",
    "fieldtheory>=0.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
aeon = "aeon_ai.cli:app"

[project.urls]
Homepage = "https://github.com/GenesisAeon/aeon-ai"
Repository = "https://github.com/GenesisAeon/aeon-ai"
Documentation = "https://genesisaeon.github.io/aeon-ai"
"Issue Tracker" = "https://github.com/GenesisAeon/aeon-ai/issues"
DOI = "https://doi.org/10.5281/zenodo.19132293"
Changelog = "https://github.com/GenesisAeon/aeon-ai/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/aeon_ai"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "TCH",       # flake8-type-checking
    "ANN",       # flake8-annotations
    "D",         # pydocstyle
    "PT",        # flake8-pytest-style
]
ignore = [
    "D100", "D104",   # missing module/package docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=aeon_ai",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=99",
]

[tool.coverage.run]
source = ["src/aeon_ai"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.7",
]
